--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -2,29 +2,41 @@ name: Docker build and publish
 on:
     workflow_dispatch
 jobs:
-    Dev:
-        permissions:
-            contents: 'read'
-            id-token: 'write'
-        uses: killerdaemon01/gh-templates/.github/workflows/docker-build.yml@main
-        with: 
-            keyvault: mykeyvault29017
-            acr_username_secret: acr-username
-            acr_password_secret: acr-password
-            acr_name: myregistry29017
-            image_name: node-image
-        secrets: inherit
+    # Dev:
+    #     permissions:
+    #         contents: 'read'
+    #         id-token: 'write'
+    #     uses: killerdaemon01/gh-templates/.github/workflows/docker-build.yml@main
+    #     with: 
+    #         keyvault: mykeyvault29017
+    #         acr_username_secret: acr-username
+    #         acr_password_secret: acr-password
+    #         acr_name: myregistry29017
+    #         image_name: node-image
+    #     secrets: inherit
 
-    Test:
-        needs: Dev
-        permissions:
-            contents: 'read'
-            id-token: 'write'
-        uses: killerdaemon01/gh-templates/.github/workflows/docker-build.yml@main
-        with: 
-            keyvault: mykeyvault29018
-            acr_username_secret: acr-username
-            acr_password_secret: acr-password
-            acr_name: myregistry29018
-            image_name: node-image
-        secrets: inherit
+    # Test:
+    #     needs: Dev
+    #     permissions:
+    #         contents: 'read'
+    #         id-token: 'write'
+    #     uses: killerdaemon01/gh-templates/.github/workflows/docker-build.yml@main
+    #     with: 
+    #         keyvault: mykeyvault29018
+    #         acr_username_secret: acr-username
+    #         acr_password_secret: acr-password
+    #         acr_name: myregistry29018
+    #         image_name: node-image
+    #     secrets: inherit
+
+
+    example_matrix:
+        strategy:
+          matrix:
+            os: [ubuntu-22.04, ubuntu-20.04]
+            version: [10, 12, 14]
+        runs-on: ${{ matrix.os }}
+        steps:
+          - uses: actions/setup-node@v3
+            with:
+              node-version: ${{ matrix.version }}
